--- a/nginx/conf.d/local.conf
+++ b/nginx/conf.d/local.conf
@@ -13,9 +13,16 @@ server {
 
     location / {
         # everything is passed to Gunicorn
+        #rewrite ^ https://$host$request_uri? permanent;
+
         proxy_pass http://thiccsite;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
+
+    #location ^~ /.well-known {
+    #    allow all;
+    #    root  /data/letsencrypt/;
+    #}
 }
