--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,33 +1,50 @@
+amqp==2.3.2
+backcall==0.1.0
 beautifulsoup4==4.5.1
+billiard==3.5.0.4
 bleach==1.5.0
 boto3==1.9.23
 botocore==1.12.23
+celery==4.2.1
 certifi==2018.8.24
 chardet==2.3.0
+decorator==4.3.0
 defusedxml==0.5.0
 Django==1.11.15
+django-celery-beat==1.0.1
 django-contrib-comments==1.7.3
 django-debug-toolbar==1.10.1
-django-game-info==0.1.3
 django-haystack==2.5.0
 django-nocaptcha-recaptcha==0.0.19
 django-pagination-py3==1.1.2
 django-storages==1.7.1
+django-timezone-field==3.0
 djangorestframework==3.4.6
 docutils==0.14
+ephem==3.7.6.0
 filebrowser-safe==0.4.5
 future==0.15.2
 grappelli-safe==0.4.4
 gunicorn==19.9.0
 html5lib==0.9999999
+ipython==7.1.1
+ipython-genutils==0.2.0
+jedi==0.13.1
 jmespath==0.9.3
+kombu==4.2.1
 Markdown==2.6.6
 mysqlclient==1.3.13
 oauthlib==2.0.0
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==3.3.1
 postmarkup==1.2.2
+prompt-toolkit==2.0.7
+ptyprocess==0.6.0
 Pygments==2.1.3
 PyJWT==1.5.3
+python-crontab==2.3.5
 python-dateutil==2.7.3
 python-openid==2.2.5
 python-social-auth==0.2.21
@@ -40,5 +57,8 @@ s3transfer==0.1.13
 sentry-sdk==0.4.0
 six==1.10.0
 sqlparse==0.2.4
+traitlets==4.3.2
 tzlocal==1.2.2
 urllib3==1.23
+vine==1.1.4
+wcwidth==0.1.7
