--- a/site/environment.env.example
+++ b/site/environment.env.example
@@ -20,6 +20,8 @@ OWNER_EMAIL=youremail
 DEFAULT_FROM_EMAIL=hello@thicc.io
 RECAPTCHA_KEY=yourkey
 RECAPTCHA_SECRET=yoursecret
+STEAM_KEY=key
+RCON_PASSWORD=yourpassword
 
 # For Dev
 DEBUG=poop
