--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -47,7 +47,6 @@ PyJWT==1.5.3
 python-crontab==2.3.5
 python-dateutil==2.7.3
 python-openid==2.2.5
-python-social-auth==0.2.21
 python-valve==0.1.1
 python3-openid==3.1.0
 pytz==2016.6.1
@@ -56,6 +55,8 @@ requests-oauthlib==0.6.2
 s3transfer==0.1.13
 sentry-sdk==0.4.0
 six==1.10.0
+social-auth-app-django==3.1.0
+social-auth-core==2.0.0
 sqlparse==0.2.4
 traitlets==4.3.2
 tzlocal==1.2.2
