added email on account creation

--- a/site/environment.env.example
+++ b/site/environment.env.example
@@ -7,7 +7,7 @@
 SITE_ID=1
 SECRET_KEY=makesomethinglonganduniquehere
 DB_ENGINE=django.db.backends.mysql
-DB_IP=mysql1
+DB_IP=mysql-site
 DB_PORT=3306
 DJANGO_SETTINGS_MODULE=thicc.settings
 PYTHONUNBUFFERED=1
@@ -22,6 +22,7 @@ RECAPTCHA_KEY=yourkey
 RECAPTCHA_SECRET=yoursecret
 STEAM_KEY=key
 RCON_PASSWORD=yourpassword
+MAIL_FROM=youremail@example.com
 
 # For Dev
 DEBUG=poop
