--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -11,6 +11,7 @@ chardet==2.3.0
 decorator==4.3.0
 defusedxml==0.5.0
 Django==1.11.15
+django-amazon-ses==2.0.0
 django-celery-beat==1.0.1
 django-contrib-comments==1.7.3
 django-debug-toolbar==1.10.1
