--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,14 +1,15 @@
 global:
   scrape_interval:     15s
+  scrape_timeout:     10s
   evaluation_interval: 15s
   external_labels:
-    monitor: 'first_prometheus_test'
+    monitor: 'thiccgaming_prometheus'
 
 rule_files:
-  - 'prometheus.rules.yml'
   - 'alert.rules.yml'
 
 alerting:
+
   alertmanagers:
   - scheme: http
     static_configs:
@@ -16,6 +17,7 @@ alerting:
       - "alertmanager:9093"
 
 scrape_configs:
+
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
@@ -24,24 +26,31 @@ scrape_configs:
   - job_name: 'django'
     scrape_interval: 5s
     static_configs:
-      - targets: ['django']
+      - targets: ['django:8000']
+
+  - job_name: 'redis_exporter'
+    static_configs:
+      - targets: ['redis-exporter:9121']
+
+  - job_name: 'mysqld-exporter'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['mysql-exporter:9104']
+
+  - job_name: 'grafana'
+    scrape_interval: 5s
+    basic_auth:
+      username: 'admin'
+      password_file: /etc/prometheus/grafana.password
+    static_configs:
+      - targets: ['grafana:3000']
 
   - job_name: 'cadvisor'
     scrape_interval: 5s
     static_configs:
       - targets: ['cadvisor:8080']
-    # dns_sd_configs:
-    #- names:
-    #  - 'tasks.cadvisor'
-    #  type: 'A'
-    #  port: 8080
 
   - job_name: 'node-exporter'
     scrape_interval: 5s
     static_configs:
       - targets: ['node-exporter:9100']
-    # dns_sd_configs:
-    #- names:
-    #  - 'tasks.node-exporter'
-    #  type: 'A'
-    #  port: 9100
