--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -21,6 +21,7 @@ django-haystack==2.5.0
 django-nocaptcha-recaptcha==0.0.19
 django-pagination-py3==1.1.2
 django-prometheus==1.0.15
+django-redis==4.10.0
 django-silk==3.0.1
 django-storages==1.7.1
 django-timezone-field==3.0
@@ -34,6 +35,7 @@ futures==3.1.1
 gprof2dot==2016.10.13
 grappelli-safe==0.4.4
 gunicorn==19.9.0
+hiredis==0.3.0
 html5lib==0.9999999
 ipython==7.1.1
 ipython-genutils==0.2.0
@@ -62,6 +64,7 @@ python-openid==2.2.5
 python-valve==0.1.1
 python3-openid==3.1.0
 pytz==2016.6.1
+redis==2.10.6
 requests==2.11.1
 requests-oauthlib==0.6.2
 s3transfer==0.1.13
